--- a/src/Commerce/productFrm.form
+++ b/src/Commerce/productFrm.form
@@ -52,14 +52,17 @@
               <EmptySpace min="-2" pref="90" max="-2" attributes="0"/>
               <Component id="sortLabel" min="-2" pref="89" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="maxLabel" alignment="0" min="-2" pref="40" max="-2" attributes="0"/>
-                  <Component id="minLabel" alignment="0" min="-2" pref="40" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="maxPrice" pref="108" max="32767" attributes="0"/>
-                  <Component id="minPrice" max="32767" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Component id="maxLabel" min="-2" pref="40" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="maxPrice" max="32767" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Component id="minLabel" min="-2" pref="40" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="minPrice" min="-2" pref="108" max="-2" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="searchLabel" min="-2" pref="111" max="-2" attributes="0"/>
@@ -77,17 +80,10 @@
                       <EmptySpace min="-2" pref="403" max="-2" attributes="0"/>
                       <Component id="mainLabel" min="-2" pref="192" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
-<<<<<<< HEAD
                       <Component id="loginBtn" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="signinBtn" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-=======
-                      <Component id="signinBtn" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="signupBtn" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
->>>>>>> a25e13aa1927624e4efa2fdea92b733f01b29dba
                       <Component id="logoutBtn" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
@@ -111,22 +107,13 @@
                       <Component id="usernameField" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-<<<<<<< HEAD
                           <Component id="loginBtn" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="signinBtn" alignment="3" min="-2" max="-2" attributes="0"/>
-=======
-                          <Component id="signinBtn" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="signupBtn" alignment="3" min="-2" max="-2" attributes="0"/>
->>>>>>> a25e13aa1927624e4efa2fdea92b733f01b29dba
                           <Component id="logoutBtn" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
-<<<<<<< HEAD
               <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
-=======
-              <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
->>>>>>> a25e13aa1927624e4efa2fdea92b733f01b29dba
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="3" attributes="0">
@@ -154,7 +141,7 @@
                       <Component id="sortLabel" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="269" max="-2" attributes="0"/>
               <EmptySpace pref="77" max="32767" attributes="0"/>
           </Group>
@@ -226,6 +213,15 @@
         </Property>
       </Properties>
     </Component>
+    <Component class="javax.swing.JTextField" name="minPrice">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="minPriceActionPerformed"/>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="minPriceKeyTyped"/>
+      </Events>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value=""/>
+      </AuxValues>
+    </Component>
     <Component class="javax.swing.JLabel" name="maxLabel">
       <Properties>
         <Property name="horizontalAlignment" type="int" value="0"/>
@@ -240,27 +236,29 @@
     <Component class="javax.swing.JTextField" name="maxPrice">
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="maxPriceActionPerformed"/>
-      </Events>
-    </Component>
-    <Component class="javax.swing.JButton" name="signupBtn">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="SIGN UP"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="signupBtnActionPerformed"/>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="maxPriceKeyTyped"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="signinBtn">
       <Properties>
-        <Property name="text" type="java.lang.String" value="SIGN IN"/>
+        <Property name="text" type="java.lang.String" value="SIGN UP"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="signinBtnActionPerformed"/>
       </Events>
     </Component>
+    <Component class="javax.swing.JButton" name="loginBtn">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="SIGN IN"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="loginBtnActionPerformed"/>
+      </Events>
+    </Component>
     <Component class="javax.swing.JTextField" name="jTextField1">
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextField1ActionPerformed"/>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTextField1KeyPressed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="searchLabel">
@@ -278,6 +276,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Search"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="searchBtnActionPerformed"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
       <AuxValues>
@@ -304,10 +305,6 @@
     </Component>
     <Component class="javax.swing.JTextField" name="usernameField">
       <Properties>
-<<<<<<< HEAD
-=======
-        <Property name="horizontalAlignment" type="int" value="0"/>
->>>>>>> a25e13aa1927624e4efa2fdea92b733f01b29dba
         <Property name="text" type="java.lang.String" value="Username" postCode="usernameField.setEditable(false);"/>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="null"/>
@@ -317,10 +314,5 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="usernameFieldActionPerformed"/>
       </Events>
     </Component>
-<<<<<<< HEAD
-=======
-    <Component class="javax.swing.JTextField" name="minPrice">
-    </Component>
->>>>>>> a25e13aa1927624e4efa2fdea92b733f01b29dba
   </SubComponents>
 </Form>
